[gd_scene load_steps=7 format=3 uid="uid://0e4k0hynpv12"]

[ext_resource type="Script" uid="uid://c55dsoxb267wf" path="res://Scripts/Player/player_controls.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://d6lnr2w43hmd" path="res://Assets/Sprites/Tank 1 Turret Sprite.png" id="3_vgqql"]
[ext_resource type="Texture2D" uid="uid://cj33umk3kxrut" path="res://Assets/Sprites/Tank Sprite 1.png" id="4_fkybt"]
[ext_resource type="Texture2D" uid="uid://bhf8m2q3nh5dy" path="res://Assets/Sprites/UI Sprites/Life Bar.png" id="5_3smsa"]
[ext_resource type="Texture2D" uid="uid://bgfr5rimp424u" path="res://Assets/Sprites/UI Sprites/Life Bar - Progress.png" id="5_fkybt"]
[ext_resource type="Script" uid="uid://t1resnqkfjmj" path="res://Scripts/UI Scripts/health_bar.gd" id="6_x3wgy"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cvnsp")

[node name="PlayerBody" type="Node2D" parent="."]

[node name="PlayerTankGun" type="Sprite2D" parent="PlayerBody"]
z_index = 1
texture_filter = 1
position = Vector2(0, -3)
scale = Vector2(3, 3)
texture = ExtResource("3_vgqql")
offset = Vector2(0, -12)

[node name="BulletSpawnPoint" type="Node2D" parent="PlayerBody/PlayerTankGun"]
position = Vector2(0, -32.6667)

[node name="PlayerTankBase" type="Sprite2D" parent="PlayerBody"]
z_index = -2
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("4_fkybt")

[node name="HealthBar" type="TextureProgressBar" parent="."]
visible = false
z_index = 100
texture_filter = 1
offset_left = -63.0
offset_top = -108.0
offset_right = 65.0
offset_bottom = -76.0
value = 100.0
texture_over = ExtResource("5_3smsa")
texture_progress = ExtResource("5_fkybt")
script = ExtResource("6_x3wgy")

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="CannonSecondaryDuration" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CannonPrimaryDuration" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DefenseDuration" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="UtilityDuration" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerBodyCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-32, -62, -18, -53, 0, -62, 18, -53, 32, -63, 44, -50, 43, -21, 28, -4, 28, 14, 48, 38, 43, 52, 31, 58, -29, 58, -46, 51, -45, 34, -26, 15, -26, -4, -43, -18, -44, -49)

[node name="UtilityCooldown" type="Timer" parent="."]

[node name="DefenseCooldown" type="Timer" parent="."]

[node name="CannonSecondaryCooldown" type="Timer" parent="."]

[node name="CannonPrimaryCooldown" type="Timer" parent="."]

[connection signal="timeout" from="CollisionTimer" to="." method="_on_collision_timer_timeout"]
[connection signal="timeout" from="DefenseDuration" to="." method="_on_defense_duration_timeout"]
[connection signal="timeout" from="UtilityDuration" to="." method="_on_utility_duration_timeout"]
[connection signal="timeout" from="UtilityCooldown" to="." method="_on_utility_cooldown_timeout"]
[connection signal="timeout" from="DefenseCooldown" to="." method="_on_defense_cooldown_timeout"]
[connection signal="timeout" from="CannonSecondaryCooldown" to="." method="_on_cannon_secondary_cooldown_timeout"]
[connection signal="timeout" from="CannonPrimaryCooldown" to="." method="_on_cannon_primary_cooldown_timeout"]
